--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.0",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
     "mongoose": "^7.2.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
